--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,28 +27,28 @@ book:
     - "license.qmd"
     - "why-qmd.qmd"
     - "installation.qmd"
-    - "rstudio.qmd"
-    - "workflow.qmd"
-    - "using-qmd.qmd"
-    - "pdf-html-word.qmd"
-    - "keyboard-shortcuts.qmd"
-    - "figures-tables-captions.qmd"
-    - "changing-figures.qmd"
-    - "math.qmd"
-    - "cite-fig-tab-sec.qmd"
-    - "citations-and-styles.qmd"
-    - "caption-reference-eqn.qmd"
-    - "common-problems.qmd"
-    - "alternative-outputs-and-exts.qmd"
-    - "next-steps.qmd"
-    - "references.qmd"
-    - "acknowledgements.qmd"
-  appendices:
-    - "appendix-visual-vs-source-mode.qmd"
-    - "appendix-template.qmd"
-    - "appendix-faq.qmd"
-    - "appendix-html-extensions.qmd"
-    - "appendix-manuscript.qmd"
+#    - "rstudio.qmd"
+#    - "workflow.qmd"
+#    - "using-qmd.qmd"
+#    - "pdf-html-word.qmd"
+#    - "keyboard-shortcuts.qmd"
+#    - "figures-tables-captions.qmd"
+#    - "changing-figures.qmd"
+#    - "math.qmd"
+#    - "cite-fig-tab-sec.qmd"
+#    - "citations-and-styles.qmd"
+#    - "caption-reference-eqn.qmd"
+#    - "common-problems.qmd"
+#    - "alternative-outputs-and-exts.qmd"
+#    - "next-steps.qmd"
+#    - "references.qmd"
+#    - "acknowledgements.qmd"
+#  appendices:
+#    - "appendix-visual-vs-source-mode.qmd"
+#    - "appendix-template.qmd"
+#    - "appendix-faq.qmd"
+#    - "appendix-html-extensions.qmd"
+#    - "appendix-manuscript.qmd"
 bibliography:
   - book.bib
   - packages.bib
